# lanyte-attest

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  REPOSITORY_SAFETY_PROTOCOLS.md
.github/workflows/: check.yml
docs/decisions/: README.md
src/: cli.rs  error.rs  key_material.rs  lib.rs  main.rs  naming.rs  paths.rs  session_registry.rs  token.rs  trust.rs  verify.rs
