[package]
name = "lanyte-attest"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Session attestation CLI and library for supervised agent sessions"
repository = "https://github.com/lanytehq/lanyte-attest"

[features]
default = ["cli", "issue", "verify"]
cli = ["dep:clap", "dep:env_logger", "issue"]
issue = ["verify", "dep:rpassword"]
verify = []

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
log = "0.4"
rpassword = { version = "7", optional = true }
rusqlite = { version = "0.32", features = ["bundled"] }
seclusor-crypto = { git = "https://github.com/3leaps/seclusor", tag = "v0.1.1", features = ["signing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "lanyte-attest"
path = "src/main.rs"
required-features = ["cli"]
